@@ -1,3 +1,4 @@
+* Make _timestamp numeric instead of datetime to work with XML-RPC and JSON-RPC
 * Add ir.trigger to trigger ModelStorage change
 * Add default value to Boolean fields at database level
 
